Pre-wrap more code to avoid layout overflow

--- a/site/themes/arangodb-docs-theme/static/css/theme.css
+++ b/site/themes/arangodb-docs-theme/static/css/theme.css
@@ -1469,6 +1469,7 @@ code, p code {
     margin: 0;
     padding: 2px;
     word-break: break-word;
+    white-space: pre-wrap;
     border-radius: 0px;
     background: var(--gray-100);
     box-shadow: none;
